# s2jax

./: .gitignore  README.md  pyproject.toml
src/conversion_testing/: ACOPP14.py  ACOPP30.py  ACOPR14.py  ACOPR30.py  AGG.py  AIRCRFTA.py  AIRCRFTB.py  AIRPORT.py  ALJAZZAF.py  ALLINIT.py  ALLINITA.py  ALLINITC.py  ALLINITU.py  ALSOTAME.py  ANTWERP.py  ARGAUSS.py  ARGLALE.py  ARGLBLE.py  ARGLINA.py  ARGLINB.py  ARGTRIG.py  ARGTRIGLS.py  ARTIF.py  ARWHEAD.py  AVGASA.py  AVGASB.py  AVION2.py  BARD.py  BARDNE.py  BATCH.py  BAmL1SP.py  BAmL1SPLS.py  BDQRTIC.py  BEALE.py  BEALENE.py  BENNETT5.py  BENNETT5LS.py  BIGGS3.py  BIGGS6.py  BIGGS6NE.py  (+1062 more)
src/python_problems/: DIAMON2D.py  test_ACOPP14.py  test_ACOPP14_jax.py
src/python_problems_for_reference/: ACOPP14.py  ACOPP30.py  ACOPR14.py  ACOPR30.py  AGG.py  AIRCRFTA.py  AIRCRFTB.py  AIRPORT.py  ALJAZZAF.py  ALLINIT.py  ALLINITA.py  ALLINITC.py  ALLINITU.py  ALSOTAME.py  ANTWERP.py  ARGAUSS.py  ARGLALE.py  ARGLBLE.py  ARGLINA.py  ARGLINB.py  ARGTRIG.py  ARGTRIGLS.py  ARTIF.py  ARWHEAD.py  AVGASA.py  AVGASB.py  AVION2.py  BARD.py  BARDNE.py  BATCH.py  BAmL1SP.py  BAmL1SPLS.py  BDQRTIC.py  BEALE.py  BEALENE.py  BENNETT5.py  BENNETT5LS.py  BIGGS3.py  BIGGS6.py  BIGGS6NE.py  (+1060 more)
src/python_problems_old/: ACOPP14.py
src/s2jax/: convert.py  function_factory.py  jax_utils.py  reference.py  sparse_utils.py  utils.py
src/testing/: ACOPP14.py  HS107.py
