[build-system]
requires = ["setuptools>=42", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "s2jax"
version = "0.0.1"
description = ""
authors = [
    { name = "John Viljoen", email = "johnviljoen2@gmail.com" },
]

readme = "README.md"
# keywords = ["quadcopter", "nonlinear control"]

dependencies = [
    "matplotlib",
    "tqdm",
    "jax[cuda12]",
    "equinox",
]

[tool.setuptools.packages.find]
where = [
    "src", "python_problems", "python_problems_old", "conversion_testing"
]  # list of folders that contain the packages (["."] by default)

